colaboration section mobile responsive fixed

--- a/styles/index.css
+++ b/styles/index.css
@@ -267,10 +267,10 @@ footer{
     /* colaboration section */
     .collab-brand{
         padding: 10px;
-        gap: 20px 30px;
+        gap: 15px 20px;
     }
     .brand-logo{
-        width: 18%;
+        width: 16%;
     }
     /* popular collection section */
     .popular-collections{
